--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -25,6 +25,40 @@
         app:shape_radius="10dp"
         app:shape_solidColor="@color/white">
 
+
+        <RelativeLayout
+            android:id="@+id/rl_default_sport"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:padding="16dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:text="Default Sport"
+                android:textColor="@color/black"
+                android:textSize="15sp"/>
+
+            <TextView
+                android:id="@+id/tv_default_sport"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:textSize="14sp"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_enter" />
+
+</RelativeLayout>
+
         <RelativeLayout
             android:id="@+id/rl_preferences"
             android:layout_width="match_parent"
@@ -53,28 +87,7 @@
             android:layout_height="0.5dp"
             android:background="@color/line" />
 
-        <RelativeLayout
-            android:id="@+id/rl_time"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:paddingHorizontal="16dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="Time"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/ic_enter" />
-
-        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
