--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,57 +7,70 @@
     android:orientation="vertical"
     tools:context="com.test.sport.ui.fragment.HomeFragment">
 
+
+
     <RelativeLayout
-        android:background="@color/white"
-        android:layout_width="match_parent"
+    android:background="@color/white"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingHorizontal="13dp"
+    android:paddingVertical="13dp">
+
+    <TextView
+        android:id="@+id/tv_sport"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:text="Basketball"
+        android:drawablePadding="5dp"
+        android:drawableEnd="@drawable/bt_down"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/tv_search"
+        android:paddingStart="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_toStartOf="@+id/iv_setting"
+        android:gravity="center"
+        android:text="Search"
+        android:textColor="@color/text_blue"
+        android:textSize="13sp" />
+
+    <!-- 使用 Material Design 设置图标 -->
+    <ImageView
+        android:id="@+id/iv_setting"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="13dp"
-        android:paddingVertical="13dp">
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:padding="13dp"
+        android:src="@drawable/ic_settings_24"/>
 
-        <TextView
-            android:id="@+id/tv_sport"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:gravity="center"
-            android:text="Basketball"
-            android:drawablePadding="5dp"
-            android:drawableEnd="@drawable/bt_down"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+    <com.hjq.shape.view.ShapeEditText
+        android:id="@+id/et_name"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_toStartOf="@+id/tv_search"
+        android:gravity="center_vertical"
+        android:hint="competition"
+        android:paddingLeft="40dp"
+        android:textSize="15sp"
+        app:shape_radius="13dp"
+        app:shape_solidColor="@color/bg_search" />
 
-        <com.hjq.shape.view.ShapeEditText
-            android:id="@+id/et_name"
-            android:layout_width="170dp"
-            android:layout_height="40dp"
-            android:layout_toStartOf="@+id/tv_search"
-            android:gravity="center_vertical"
-            android:hint="competition"
-            android:paddingLeft="40dp"
-            android:textSize="15sp"
-            app:shape_radius="13dp"
-            app:shape_solidColor="@color/bg_search" />
+    <ImageView
+        android:id="@+id/iv_search_icon"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="-30dp"
+        android:layout_toStartOf="@+id/et_name"
+        android:src="@drawable/ic_search" />
 
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="-30dp"
-            android:layout_toStartOf="@+id/et_name"
-            android:src="@drawable/ic_search" />
-
-        <TextView
-            android:id="@+id/tv_search"
-            android:paddingStart="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_alignParentEnd="true"
-            android:gravity="center"
-            android:text="Search"
-            android:textColor="@color/text_blue"
-            android:textSize="13sp" />
-
-    </RelativeLayout>
+</RelativeLayout>
 
     <com.haibin.calendarview.CalendarView
         android:id="@+id/calendarView"
