调整底部导航栏布局 移动设置功能位置 修改选择喜欢球队的逻辑

--- a/app/src/main/res/menu/navigation_main.xml
+++ b/app/src/main/res/menu/navigation_main.xml
@@ -11,9 +11,9 @@
         android:title="Schedule" />
 
     <item
-        android:id="@+id/navigation_setting"
+        android:id="@+id/navigation_favourite"
         android:icon="@drawable/selector_setting"
-        android:title="Setting" />
+        android:title="Favourite" />
 
     <item
         android:id="@+id/navigation_chat"
