--- a/app/src/main/res/layout/activity_preference.xml
+++ b/app/src/main/res/layout/activity_preference.xml
@@ -25,7 +25,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="喜欢的观赛时间"
+                android:text="Preferred time"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -41,7 +41,7 @@
                     android:id="@+id/tvSelectedTimes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="点击选择观赛时间" />
+                    android:hint="Click to select a time" />
             </LinearLayout>
 
 
