--- a/app/src/main/res/menu/navigation_main.xml
+++ b/app/src/main/res/menu/navigation_main.xml
@@ -19,6 +19,12 @@
         android:id="@+id/navigation_chat"
         android:icon="@drawable/ic_chat_ai"
         android:title="Chat" />
+    <item
+        android:id="@+id/navigation_map"
+        android:icon="@drawable/ic_map"
+        android:title="Map" />
+
+
 
 
 </menu>
