实现图片分享

--- a/app/src/main/res/layout/activity_sport.xml
+++ b/app/src/main/res/layout/activity_sport.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_btn_game"
-        android:paddingTop="20dp" />
+        android:paddingTop="20dp" 
+        app:titleBar_type="2"/>
 
     <com.hjq.shape.layout.ShapeRelativeLayout
         android:layout_below="@+id/title_bar"
