--- a/app/src/main/res/menu/navigation_main.xml
+++ b/app/src/main/res/menu/navigation_main.xml
@@ -17,11 +17,11 @@
 
     <item
         android:id="@+id/navigation_chat"
-        android:icon="@drawable/ic_chat_ai"
+        android:icon="@drawable/selector_chat"
         android:title="Chat" />
     <item
         android:id="@+id/navigation_map"
-        android:icon="@drawable/ic_map"
+        android:icon="@drawable/selector_map"
         android:title="Map" />
 
 
